gengo/bind/sdkMerge/Stderr.log
combined_headers.h:757:9: error: unknown type name 'wchar_t'
  757 | typedef wchar_t            WCHAR;
      |         ^
combined_headers.h:1793:5: error: unknown type name 'PVOID'
 1793 |     PVOID                                 Context;
      |     ^
combined_headers.h:1848:1: warning: use of 'static_assert' without inclusion of <assert.h> is a Microsoft extension [-Wmicrosoft-static-assert]
 1848 | static_assert(sizeof(DEBUGGEE_UD_PAUSED_PACKET) < PacketChunkSize,
      | ^~~~~~~~~~~~~
      | _Static_assert
combined_headers.h:1887:5: error: unknown type name 'HANDLE'
 1887 |     HANDLE      hEvent;
      |     ^
combined_headers.h:1954:5: error: unknown type name 'PVOID'
 1954 |     PVOID TargetAddress;
      |     ^
combined_headers.h:1955:5: error: unknown type name 'PVOID'
 1955 |     PVOID HookFunction;
      |     ^
combined_headers.h:1967:5: error: unknown type name 'SIZE_T'
 1967 |     SIZE_T                      PhysicalAddress;
      |     ^
combined_headers.h:2690:5: error: unknown type name 'LIST_ENTRY'
 2690 |     LIST_ENTRY
      |     ^
combined_headers.h:2694:5: error: unknown type name 'time_t'; did you mean 'size_t'?
 2694 |     time_t CreationTime; // Date of creating this event
      |     ^~~~~~
      |     size_t
note: 'size_t' declared here
combined_headers.h:2732:5: error: unknown type name 'PVOID'
 2732 |     PVOID CommandStringBuffer;
      |     ^
combined_headers.h:2909:5: error: unknown type name 'PVOID'
 2909 |     PVOID        BufferAddress;
      |     ^
combined_headers.h:3614:5: error: unknown type name 'PVOID'
 3614 |     PVOID  CustomCodeBufferAddress;
      |     ^
combined_headers.h:3958:22: error: use of undeclared identifier 'MAX_PATH'
 3958 |     char    FilePath[MAX_PATH];
      |                      ^
combined_headers.h:3959:30: error: use of undeclared identifier 'MAX_PATH'
 3959 |     char    ModuleSymbolPath[MAX_PATH];
      |                              ^
combined_headers.h:3968:5: error: unknown type name 'wchar_t'
 3968 |     wchar_t FilePath[MAX_PATH];
      |     ^
combined_headers.h:3968:22: error: use of undeclared identifier 'MAX_PATH'
 3968 |     wchar_t FilePath[MAX_PATH];
      |                      ^
combined_headers.h:4010:1: warning: use of 'static_assert' without inclusion of <assert.h> is a Microsoft extension [-Wmicrosoft-static-assert]
 4010 | static_assert(sizeof(DEBUGGER_UPDATE_SYMBOL_TABLE) < PacketChunkSize,
      | ^~~~~~~~~~~~~
      | _Static_assert
2 warnings and 15 errors generated.
